<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGithub"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_github"
            android:textAllCaps="false"
            app:icon="@drawable/ic_github" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLicences"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/btn_licenses"
            android:textAllCaps="false"
            app:icon="@drawable/ic_certificate_outline" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAppDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:autoLink="web"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    </ScrollView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_enter_link"
        app:endIconDrawable="@drawable/ic_baseline_content_paste_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textUri|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClearAll"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_clear_all"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_clear_all_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLaunch"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_launch"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_open_in_new_24" />

    </LinearLayout>
</LinearLayout>